--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -56,3 +56,78 @@
     height: 100%;
     border: 0;
   }
+
+  .md-typeset h1, .md-typeset h2 {
+    font-weight: 400;
+  }
+
+ .md-typeset a:focus, .md-typeset a:hover {
+    text-decoration: underline;
+  }
+
+  .md-banner {
+    border-bottom: solid 1px;
+    border-bottom-color: #222;
+  }
+
+  .md-footer {
+    border-top: solid 1px;
+    border-top-color: #222;
+  }
+
+  .md-dialog {
+    background-color: #90caf9;
+  }
+
+  div.md-copyright>div.md-copyright__highlight>a {
+    text-decoration: none;
+  }
+
+  [data-md-color-scheme="slate"] 
+  {
+    --md-default-fg-color: #fafafa;
+    --md-default-fg-color--light: #fafafa;
+    --md-default-fg-color--lighter: hsla(var(--md-hue),15%,90%,0.32);
+    --md-default-fg-color--lightest: hsla(var(--md-hue),15%,90%,0.12);
+    --md-default-bg-color: #111;
+    --md-default-bg-color--light: hsla(var(--md-hue),15%,14%,0.54);
+    --md-default-bg-color--lighter: hsla(var(--md-hue),15%,14%,0.26);
+    --md-default-bg-color--lightest: hsla(var(--md-hue),15%,14%,0.07);
+    --md-accent-fg-color: #90caf9;
+    --md-accent-fg-color--transparent: #90caf909;
+    --md-code-fg-color: #eaeaea;
+    --md-code-bg-color: #191919;
+    --md-code-hl-color: #2977ff;
+    --md-code-hl-color--light: #2977ff1a;
+    --md-code-hl-number-color: #e6695b;
+    --md-code-hl-special-color: #f06090;
+    --md-code-hl-function-color: #c973d9;
+    --md-code-hl-constant-color: #9383e2;
+    --md-code-hl-keyword-color: #90caf9;
+    --md-code-hl-string-color: #2fb170;
+    --md-code-hl-name-color: var(--md-code-fg-color);
+    --md-code-hl-operator-color: var(--md-default-fg-color--light);
+    --md-code-hl-punctuation-color: #eaeaea;
+    --md-code-hl-comment-color: #bababa;
+    --md-code-hl-generic-color: var(--md-default-fg-color--light);
+    --md-code-hl-variable-color: var(--md-default-fg-color--light);
+    --md-typeset-a-color: #90caf9;
+    --md-primary-fg-color: #111;
+    --md-typeset-kbd-color: hsla(var(--md-hue),15%,90%,0.12);
+    --md-typeset-kbd-accent-color: hsla(var(--md-hue),15%,90%,0.2);
+    --md-typeset-kbd-border-color: hsla(var(--md-hue),15%,14%,1);
+    --md-typeset-mark-color: #4287ff4d;
+    --md-typeset-table-color: hsla(var(--md-hue),15%,95%,0.12);
+    --md-typeset-table-color--light: hsla(var(--md-hue),15%,95%,0.035);
+    --md-admonition-fg-color: var(--md-default-fg-color);
+    --md-admonition-bg-color: var(--md-default-bg-color);
+    --md-primary-fg-color--dark: #191919;
+    --md-footer-bg-color: hsla(var(--md-hue),15%,10%,0.87);
+    --md-footer-bg-color--dark: #111;
+    --md-footer-fg-color: #fafafa;
+    --md-footer-bg-color: #111;
+    --md-shadow-z1: 0 0.2rem 0.5rem #0000000d, 0 0 0.05rem #0000001a;
+    --md-shadow-z2: 0 0.2rem 0.5rem #00000040, 0 0 0.05rem #00000040;
+    --md-shadow-z3: 0 0.2rem 0.5rem #0006, 0 0 0.05rem #00000059;
+    color-scheme: dark;
+  }
