--- a/custom/partials/comments.html
+++ b/custom/partials/comments.html
@@ -1,6 +1,6 @@
 {% if page.meta.comments %}
 <!-- That custom parts can cause problem with i18n -->
-<h2 id="comments">Commentaires<a class="headerlink" href="#commentaires" title="Lien permanent"></a></h2>
+<h2 id="comments">Commentaires</h2>
   <!-- Insert generated snippet here -->
   <script src="https://giscus.app/client.js"
   data-repo="c2tz/c2tz.li"
@@ -12,7 +12,7 @@
   data-reactions-enabled="1"
   data-emit-metadata="0"
   data-input-position="bottom"
-  data-theme="https://blog.cta.li/stylesheets/extra.css"
+  data-theme="https://blog.cta.li/stylesheets/giscus.css"
   data-lang="fr"
   data-loading="lazy"
   crossorigin="anonymous"
