--- a/custom/partials/comments.html
+++ b/custom/partials/comments.html
@@ -12,7 +12,7 @@
   data-reactions-enabled="1"
   data-emit-metadata="0"
   data-input-position="bottom"
-  data-theme="preferred_color_scheme"
+  data-theme="https://blog.cta.li/stylesheets/extra.css"
   data-lang="fr"
   data-loading="lazy"
   crossorigin="anonymous"
