--- a/custom/partials/comments.html
+++ b/custom/partials/comments.html
@@ -12,7 +12,7 @@
   data-reactions-enabled="1"
   data-emit-metadata="0"
   data-input-position="bottom"
-  data-theme="https://blog.cta.li/stylesheets/extra.css"
+  data-theme="https://blog.cta.li/stylesheets/giscus.css"
   data-lang="fr"
   data-loading="lazy"
   crossorigin="anonymous"
@@ -26,8 +26,8 @@
     var palette = __md_get("__palette")
     if (palette && typeof palette.color === "object") {
       var theme = palette.color.scheme === "slate"
-        ? "https://blog.cta.li/stylesheets/extra.css"
-        : "https://blog.cta.li/stylesheets/extra.css"
+        ? "https://blog.cta.li/stylesheets/giscus.css"
+        : "https://blog.cta.li/stylesheets/giscus.css"
 
       // Instruct Giscus to set theme
       giscus.setAttribute("data-theme", theme) 
@@ -40,8 +40,8 @@
         var palette = __md_get("__palette")
         if (palette && typeof palette.color === "object") {
           var theme = palette.color.scheme === "slate"
-            ? "https://blog.cta.li/stylesheets/extra.css"
-            : "https://blog.cta.li/stylesheets/extra.css"
+            ? "https://blog.cta.li/stylesheets/giscus.css"
+            : "https://blog.cta.li/stylesheets/giscus.css"
 
           // Instruct Giscus to change theme
           var frame = document.querySelector(".giscus-frame")
